# api-challenge

./: .gitignore  Cargo.toml  LICENSE  Readme.md  challenge.md
src/: lib.rs  main.rs
src/procedural/: cpu.rs  dates.rs  email.rs  hostname.rs  image.rs  ip.rs  mod.rs  names.rs  os.rs  usages.rs
