[package]
name = "challenge"
version = "0.1.0"
authors = ["Yoann Kehler <mail@yoann.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
actix-web = {version="2", default-features = false }
actix-rt = "1"
futures = "0.3.5"
serde = "1"
serde_json = {version="1", features=["preserve_order"]}
rand = "0.7.3"
rand_xorshift = "0.2.0"
uuid = {version="0.8.1", features=["v4"]}
chrono = "0.4.11"
